--- a/package.json
+++ b/package.json
@@ -28,19 +28,18 @@
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-ble-manager": "^12.2.0",
+    "react-native-camera-kit": "^16.1.3",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.26.1",
     "react-native-permissions": "^5.4.2",
     "react-native-push-notification": "^8.1.1",
-    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^15.12.1",
-    "react-native-vision-camera": "^4.7.2",
     "react-native-worklets": "^0.5.0"
   },
   "devDependencies": {
