--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.81.1",
     "react-native-ble-manager": "^12.2.0",
     "react-native-camera-kit": "^16.1.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.26.1",
@@ -38,8 +39,10 @@
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-signature-canvas": "^4.7.0",
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^15.12.1",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "^0.5.0"
   },
   "devDependencies": {
