--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.12.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-audio-record": "^0.2.2",
     "react-native-ble-manager": "^12.2.0",
     "react-native-camera-kit": "^16.1.3",
     "react-native-fs": "^2.20.0",
@@ -41,6 +42,7 @@
     "react-native-screens": "^4.16.0",
     "react-native-signature-canvas": "^4.7.0",
     "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-sound": "^0.13.0",
     "react-native-svg": "^15.12.1",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "^0.5.0"
